--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -14,6 +14,16 @@
 				<%= link_to "Delete #{r.name}", restaurant_path(r.id), method: :delete, 'data-confirm' => "Are you sure you want to delete #{r.name}?" %><br>
 				<%= link_to "Review #{r.name}", new_restaurant_review_path(r.id) %>
 			</li>
+
+			<%= form_for [r, @review] do |form| %>
+				<%= form.label :thoughts %>
+				<%= form.text_area :thoughts %>
+
+				<%= form.label :rating %>
+				<%= form.select :rating, 1..5 %>
+
+				<%= form.submit %>
+			<% end %>
 	  <% end %>
 	<% else %>
 	  <h1>No restaurants yet</h1>
