--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,31 +1,42 @@
-<ul>
-	<% if @restaurants.any? %>
-	  <% @restaurants.each do |r| %>
-	    <li>
-	    	<%= r.name %> (<%= r.cuisine %>)<br>
-				Average rating: <%= star_rating(r.average_rating) %>
-	    		<ul>
-	    			<% r.reviews.each do |review| %>
-	    			<li><%= review.thoughts %> (<%= review.rating %>)</li>
+<div>
+	<ul>
+		<% if @restaurants.any? %>
+		  <% @restaurants.each do |restaurant| %>
+		    <li class='restaurant'>
+
+		    	<%= restaurant.name %> (<%= restaurant.cuisine %>)<br>
+		    	
+	    		<ul class='reviews'>
+	    			<% restaurant.reviews.each do |review| %>
+	    			<li><%= review.thoughts %> (<%= star_rating review.rating %>)</li>
 	    			<% end %>
 	    		</ul>
 
-				<%= link_to "Edit #{r.name}", edit_restaurant_path(r.id) %><br>
-				<%= link_to "Delete #{r.name}", restaurant_path(r.id), method: :delete, 'data-confirm' => "Are you sure you want to delete #{r.name}?" %><br>
-				<%= link_to "Review #{r.name}", new_restaurant_review_path(r.id) %>
-			</li>
+		    	<p>Average rating: <span class='average_rating'><%= star_rating(restaurant.average_rating) %></span></p>
 
-			<%= form_for [r, @review] do |form| %>
-				<%= form.label :thoughts %>
-				<%= form.text_area :thoughts %>
+					<%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant.id) %><br>
+					<%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant.id), method: :delete, 'data-confirm' => "Are you sure you want to delete #{restaurant.name}?" %><br>
 
-				<%= form.label :rating %>
-				<%= form.select :rating, 1..5 %>
+					<!-- review form -->
+					<%= form_for [restaurant, @review] do |form| %>
+						<%= form.label :thoughts %>
+						<%= form.text_area :thoughts %>
 
-				<%= form.submit %>
-			<% end %>
-	  <% end %>
-	<% else %>
-	  <h1>No restaurants yet</h1>
-	<% end %>
-</ul>
+						<%= form.label :rating %>
+						<%= form.select :rating, 1..5 %>
+
+						<%= form.submit %>
+					<% end %>
+				</li>
+
+
+		  <% end %>
+		<% else %>
+		  <h1>No restaurants yet</h1>
+		<% end %>
+	</ul>
+</div>
+
+<div>
+	<%= link_to 'Create restaurant', new_restaurant_path %>
+</div>
