--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,83 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Yelpmay</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<h1><a href='/'>RestauRate</a></h1>
-<h2>Say what you think, don't be shy</h2>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+    <title>RestauRate</title>
+  	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  	<%= stylesheet_link_tag    '/assets/twitter_bootstrap.css', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+  </head>
 
-<% if user_signed_in? %>
-  <p><%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-  <%= link_to('Edit user details', edit_user_registration_path) %></p>
-<% else %>
-  <p><%= link_to('Login', new_user_session_path)  %>
-  <%= link_to('Register', new_user_registration_path)  %></p>
-<% end %>
+  <body>
 
-<%= yield %>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">RestauRate</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+
+      			<% if user_signed_in? %>
+						  <p>
+						  <span class='navbar-text'>
+						  	Welcome, <%= current_user.email %>
+						  </span>
+						  <%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'btn btn-default navbar-btn' %>
+						  <%= link_to 'Edit user details', edit_user_registration_path, class: 'btn btn-default navbar-btn' %></p>
+						<% else %>
+						  <p><%= link_to 'Login', new_user_session_path, class: 'btn btn-default navbar-btn' %>
+						  <%= link_to 'Register', new_user_registration_path, class: 'btn btn-default navbar-btn' %></p>
+					<% end %>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+		<div class="jumbotron">
+		  <h1><a href='/'>RestauRate</a></h1>
+			<h2>Say what you think, don't be shy</h2>
+
+			<p>
+				<%= link_to 'Create restaurant', new_restaurant_path, class: "btn btn-primary btn-lg btn-block"  %>
+			</p>
+
+			<h5>This web application is a project created on the week #8 of <a href='http://www.makersacademy.com/' target='blank'>Makers Academy</a>, if you want, you can check the code on the <a href='https://github.com/mserino/Yelp' target='blank'>github page</a>.</h5>
+
+		</div>
+		
+    <% if notice %>
+      <p class="alert alert-success alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <%= notice %>
+      </p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <%= alert %>
+      </p>
+    <% end %>
+
+			<%= yield %>
 
 
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
