--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -71,11 +71,9 @@
 										<%= form.label :rating, class: 'control-label' %>
 										<%= form.select :rating, 1..5, class: 'form-control'%>
 										</p>
-					  			</div>
 
-										<div class='panel-footer'>
-											<%= form.submit class: 'btn btn-default' %>
-										</div>
+											<p><%= form.submit class: 'btn btn-default' %></p>
+					  			</div>
 									<% end %>
 								<% else %>
 								<div class="panel-body">
